Support for multiple failed statuses

--- a/static/alarming-system.html
+++ b/static/alarming-system.html
@@ -42,7 +42,7 @@
 				$('#result').empty();
 				$('#result').html(data);
 				notification = JSON.parse(data);
-				if (notification['status'] == "ACKNOWLEDGED") {
+				if ((notification['status'] == "ACKNOWLEDGED") || (notification['status'] == "FAILED")) {
 					deactivatePolling();
 				}
 			})
