--- a/static/notification-system.html
+++ b/static/notification-system.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Your Alarming System</title>
+		<title>SPS - Desktop Client</title>
 		<script src="jquery-2.1.0.min.js"></script>
 		<script>
 		function activatePolling() {
@@ -134,6 +134,7 @@
 			poller = 0;
 			requestNotificationsGrant();
 			notifications_list = {};
+			$('#togglePollerCheck').prop('checked', false);
 			$('#show_button').click(function () { postNotification($('#notification_text').val()); });
 		});
 		</script>
