--- a/static/alarming-system.html
+++ b/static/alarming-system.html
@@ -17,7 +17,7 @@
 		function createNotification() {
 			$.ajax({
 				type: "POST",
-				url: "http://localhost:5000/v0.1/createNotification",
+				url: "/v0.1/createNotification",
 				username: "alarming",
 				password: "system",
 				data: $('#alarm_form').serialize()
@@ -40,7 +40,7 @@
 				type: "GET",
 				username: "alarming",
 				password: "system",
-				url: "http://localhost:5000/v0.1/getNotification/" + notificationId
+				url: "/v0.1/getNotification/" + notificationId
 			})
 			.done( function(data) {
 				$('#result').empty();
@@ -59,16 +59,27 @@
 		}
 		</script>
 		<style>
+                body {
+                        font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;;
+                }
+
 		#result {
+			padding: 20px;
 			border: 1px solid green;
+                        font-family: monospace;
 		}
 		#error {
+			padding: 20px;
 			border: 1px solid red;
 			visibility: hidden;
 		}
+		#alarm_form {
+			padding: 5px;
+		}		
 		</style>
 	</head>
 	<body>
+		<h1>Simple Paging System: mock Alarming System</h1>
 		<form id="alarm_form" method="post" action="javascript:createNotification()">
 			<label for="message">Message</label> <input type="text" name="message" /><br>
 			<label for="receiver">Receiver</label> <input type="text" name="receiver" value="username" /><br>
